namespace java enums

enum Currency {
    PLN,
    USD,
    EUR,
    GBP,
    CHF,
}

enum ServiceMethod {
    ACCOUNT,
    BALANCE,
    CREDIT,
    CONFIRM
}
